[gd_scene load_steps=14 format=3 uid="uid://dmwxm4pqywvpr"]

[ext_resource type="PackedScene" uid="uid://c7xqymt1kcmjk" path="res://scenes/world/zone_1.tscn" id="1_zone"]
[ext_resource type="PackedScene" uid="uid://czone2chunjo" path="res://scenes/world/zone_2.tscn" id="1_zone2"]
[ext_resource type="PackedScene" uid="uid://czone3jinno" path="res://scenes/world/zone_3.tscn" id="1_zone3"]
[ext_resource type="PackedScene" uid="uid://bk3qj8l2xp5yw" path="res://scenes/player/player.tscn" id="2_player"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_game_manager"]
[ext_resource type="PackedScene" uid="uid://bfkqj2mw6xypr" path="res://scenes/ui/chat.tscn" id="4_chat"]
[ext_resource type="PackedScene" uid="uid://cjkxm4pqh8wpr" path="res://scenes/ui/player_hud.tscn" id="5_hud"]
[ext_resource type="PackedScene" uid="uid://cjkxm4inventory" path="res://scenes/ui/inventory.tscn" id="6_inventory"]
[ext_resource type="Script" path="res://scripts/targeting_system.gd" id="7_targeting"]
[ext_resource type="PackedScene" uid="uid://ctargetframe001" path="res://scenes/ui/target_frame.tscn" id="8_target_frame"]
[ext_resource type="PackedScene" uid="uid://ccombattext001" path="res://scenes/ui/combat_text.tscn" id="9_combat_text"]
[ext_resource type="Script" path="res://scripts/cursor_manager.gd" id="10_cursor"]
[ext_resource type="PackedScene" uid="uid://cloginscreen" path="res://scenes/ui/login_screen.tscn" id="11_login"]

[node name="Main" type="Node3D"]

[node name="Zone1" parent="." instance=ExtResource("1_zone")]

[node name="Zone2" parent="." instance=ExtResource("1_zone2")]

[node name="Zone3" parent="." instance=ExtResource("1_zone3")]

[node name="Player" parent="." groups=["local_player"] instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_game_manager")

[node name="PlayersContainer" type="Node3D" parent="GameManager"]

[node name="EnemiesContainer" type="Node3D" parent="GameManager"]

[node name="ItemsContainer" type="Node3D" parent="GameManager"]

[node name="EffectsContainer" type="Node3D" parent="GameManager"]

[node name="TargetingSystem" type="Node" parent="GameManager" groups=["targeting_system"]]
script = ExtResource("7_targeting")

[node name="CursorManager" type="Node" parent="GameManager"]
script = ExtResource("10_cursor")

[node name="UI" type="CanvasLayer" parent="."]

[node name="LoginScreen" parent="UI" instance=ExtResource("11_login")]

[node name="GameUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerHUD" parent="UI/GameUI" instance=ExtResource("5_hud")]

[node name="TargetFrame" parent="UI/GameUI" instance=ExtResource("8_target_frame")]

[node name="ChatUI" parent="UI/GameUI" instance=ExtResource("4_chat")]

[node name="InventoryUI" parent="UI/GameUI" instance=ExtResource("6_inventory")]

[node name="CombatText" parent="UI/GameUI" instance=ExtResource("9_combat_text")]
